<resources>
    <string name="app_name">DDC</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-5857470349008729~8413259913</string>

    <!-- common -->
    <string name="error_user_token">Some thing wrong please try again</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>

    <!--login activity-->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_user">New user?</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="gender">Gender</string>
    <string name="country">Country</string>
    <string name="name_is_required">Name is required</string>
    <string name="age_is_required">Age is required</string>
    <string name="password_is_required">Password is required</string>
    <string name="rePassword_is_required">Re enter the password is required</string>
    <string name="user_gender">Gender is required</string>
    <string name="password_not_confirmed_right">Password does not match</string>
    <string name="not_valid_email">Not valid email</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="error_wek_password">Weak password , must more than 6 chars</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_user_exists">This email already exists</string>
    <string name="retry">Retry</string>
    <string name="account_information">Account Information</string>
    <string name="profile_information">Profile Information</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="password_confirm">Password (Confirm)</string>
    <string name="full_name">Full Name</string>
    <string name="birthday">Date of birth</string>
    <string name="keep_me_signed_in">Keep me Signed in</string>
    <string name="creating_new_account">Creating new account...</string>
    <string name="invalid_login">Email or password incorrect</string>
    <string name="loging_in">Log in...</string>
    <string name="user_over_view">Over view</string>

    <string name="create_new_account">Create new account</string>
    <string name="search">Search</string>
    <string name="get_location_permission">Gimme the permission!</string>
    <string name="gps_message">Would you mind to turn GPS on ?</string>


    <string name="loc_mess">Please on location of your device. To get your current Address.</string>
    <string name="loc_title">Location Alert</string>


    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>

    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>

    <string name="location_settings_inadequate_warning">The location settings on the device are not
        adequate to run this sample. Fix in Settings.</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="cuntry">Country</string>
    <string name="address">Address</string>
    <string name="open_gps_msg">would you mind to open gps in high accuracy?</string>
    <string name="location">Location</string>
    <string name="request_location_msg">Pleas provide us your location ,its help you in more things e.g to find nearby people to you and more</string>
    <string name="go_to_hell">Go to hell</string>
    <string name="accept">ACCEPT</string>
    <string name="decilne">DECILNE</string>
    <string name="save">Save</string>
    <string name="phone">Phone</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="personal">Personal</string>
    <string name="job">Job</string>
    <string name="experience">Experience</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">User name</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>

</resources>
