<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_20"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/root_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:id="@+id/scroller"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:clipToPadding="false"
            android:padding="@dimen/_14sdp"
            android:scrollbars="none"
            android:scrollingCache="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:text="@string/sign_up"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                    android:textColor="@color/blue_600"
                    android:textStyle="bold" />

                <View
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_4sdp"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_18sdp"
                    android:background="@color/blue_600" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_10sdp"
                        android:layout_height="@dimen/_10sdp"
                        android:layout_margin="@dimen/_5sdp"
                        android:src="@drawable/shape_circle"
                        android:tint="@color/red_400" />

                    <View
                        android:layout_width="@dimen/_8sdp"
                        android:layout_height="0dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/account_information"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/blue_grey_600" />

                </LinearLayout>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_8sdp"
                    app:cardBackgroundColor="@color/grey_10"
                    app:cardCornerRadius="@dimen/_2sdp"
                    app:cardElevation="@dimen/_1sdp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/email"
                            style="@style/EditText.Flat.Grey"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:background="@android:color/transparent"
                            android:hint="@string/email"
                            android:minHeight="@dimen/_40sdp"
                            android:paddingLeft="@dimen/_15sdp"
                            android:paddingRight="@dimen/_15sdp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_1sdp"
                            android:background="@color/grey_5" />


                        <EditText
                            android:id="@+id/password"
                            style="@style/EditText.Flat.Grey"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:background="@android:color/transparent"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:minHeight="@dimen/_40sdp"
                            android:paddingLeft="@dimen/_15sdp"
                            android:paddingRight="@dimen/_15sdp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_1sdp"
                            android:background="@color/grey_5" />

                        <EditText
                            android:id="@+id/re_password"
                            style="@style/EditText.Flat.Grey"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:background="@android:color/transparent"
                            android:hint="@string/password_confirm"
                            android:inputType="textPassword"
                            android:minHeight="@dimen/_40sdp"
                            android:paddingLeft="@dimen/_15sdp"
                            android:paddingRight="@dimen/_15sdp" />
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_1sdp"
                            android:background="@color/grey_5" />

                        <EditText
                            android:id="@+id/phone"
                            style="@style/EditText.Flat.Grey"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:background="@android:color/transparent"
                            android:hint="@string/phone"
                            android:inputType="phone"
                            android:minHeight="@dimen/_40sdp"
                            android:paddingLeft="@dimen/_15sdp"
                            android:paddingRight="@dimen/_15sdp" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_10sdp"
                        android:layout_height="@dimen/_10sdp"
                        android:layout_margin="@dimen/_5sdp"
                        android:src="@drawable/shape_circle"
                        android:tint="@color/red_400" />

                    <View
                        android:layout_width="@dimen/_8sdp"
                        android:layout_height="0dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/profile_information"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/blue_grey_600" />

                </LinearLayout>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:cardBackgroundColor="@color/grey_10"
                    app:cardCornerRadius="@dimen/_2sdp"
                    app:cardElevation="@dimen/_1sdp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/user_name"
                            style="@style/EditText.Flat.Grey"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:background="@android:color/transparent"
                            android:hint="@string/full_name"
                            android:minHeight="@dimen/_40sdp"
                            android:paddingLeft="@dimen/_15sdp"
                            android:paddingRight="@dimen/_15sdp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_1sdp"
                            android:background="@color/grey_5" />

                        <EditText
                            android:id="@+id/user_age"
                            style="@style/EditText.Flat.Grey"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:background="@android:color/transparent"
                            android:drawableEnd="@drawable/ic_arrow_drop_grey"
                            android:drawableRight="@drawable/ic_arrow_drop_grey"
                            android:editable="false"
                            android:focusable="false"
                            android:hint="@string/birthday"
                            android:minHeight="@dimen/_40sdp"
                            android:paddingLeft="@dimen/_15sdp"
                            android:paddingRight="@dimen/_15sdp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_1sdp"
                            android:background="@color/grey_5" />

                        <EditText
                            android:id="@+id/user_gender"
                            style="@style/EditText.Flat.Grey"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:background="@android:color/transparent"
                            android:drawableEnd="@drawable/ic_arrow_drop_grey"
                            android:drawableRight="@drawable/ic_arrow_drop_grey"
                            android:editable="false"
                            android:focusable="false"
                            android:hint="@string/gender"
                            android:minHeight="@dimen/_40sdp"
                            android:paddingLeft="@dimen/_15sdp"
                            android:paddingRight="@dimen/_15sdp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_1sdp"
                            android:background="@color/grey_5" />

                        <EditText
                            android:onClick="requestLocation"
                            android:id="@+id/city"
                            style="@style/EditText.Flat.Grey"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:background="@android:color/transparent"
                            android:editable="false"
                            android:focusable="false"
                            android:hint="@string/city"
                            android:minHeight="@dimen/_40sdp"
                            android:paddingLeft="@dimen/_15sdp"
                            android:paddingRight="@dimen/_15sdp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_1sdp"
                            android:background="@color/grey_5" />

                        <EditText
                            android:onClick="requestLocation"
                            android:id="@+id/state"
                            style="@style/EditText.Flat.Grey"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:background="@android:color/transparent"
                            android:editable="false"
                            android:focusable="false"
                            android:hint="@string/state"
                            android:minHeight="@dimen/_40sdp"
                            android:paddingLeft="@dimen/_15sdp"
                            android:paddingRight="@dimen/_15sdp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_1sdp"
                            android:background="@color/grey_5" />

                        <EditText
                            android:onClick="requestLocation"
                            android:id="@+id/country"
                            style="@style/EditText.Flat.Grey"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:background="@android:color/transparent"
                            android:editable="false"
                            android:focusable="false"
                            android:hint="@string/cuntry"
                            android:minHeight="@dimen/_40sdp"
                            android:paddingLeft="@dimen/_15sdp"
                            android:paddingRight="@dimen/_15sdp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_1sdp"
                            android:background="@color/grey_5" />

                        <EditText
                            android:onClick="requestLocation"
                            android:id="@+id/address"
                            style="@style/EditText.Flat.Grey"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_40sdp"
                            android:background="@android:color/transparent"
                            android:editable="false"
                            android:focusable="false"
                            android:hint="@string/address"
                            android:minHeight="@dimen/_40sdp"
                            android:paddingLeft="@dimen/_15sdp"
                            android:paddingRight="@dimen/_15sdp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_1sdp"
                            android:background="@color/grey_5" />

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_50sdp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/_50sdp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/already_have_an_account"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/blue_grey_600" />

                    <TextView
                        android:id="@+id/sign_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="true"
                        android:text="@string/login"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                        android:textColor="@color/blue_600"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <com.balysv.materialripple.MaterialRippleLayout
            style="@style/RippleStyleWhite"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentBottom="true"
            android:background="@color/blue_600">

            <TextView
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/register"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_16sdp" />
        </com.balysv.materialripple.MaterialRippleLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone">

        <com.cv.store.widget.ViewLoadingDotsGrow
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_gravity="center"
            android:background="@color/blue_900" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_14sdp"
            android:gravity="center"
            android:text="@string/creating_new_account"
            android:textColor="@color/blue_900"
            android:textSize="18sp" />
    </LinearLayout>


</RelativeLayout>